@@ -1,3 +1,9 @@
+#! /bin/sh
+# -*- tcl -*- \
+exec tclsh "$0" ${1+"$@"}
+
+package require Tk
+
 # run.tcl --
 #     Auxiliary script to run the examples
 #
